# ai-controller

./: .gitignore  AGENTS.md  AI-CHANGELOG.md  AI-TASKS.md  LICENSE  README.md  ai_controller.py  pyproject.toml
.agents/skills/resolve/: SKILL.md
ai_controller/: __init__.py  __main__.py  agent.py  backup.py  cli.py  config.py  git_ops.py  logger.py  prompts.py  tasks.py  test_detector.py  validation.py
tests/: conftest.py  test_ai_controller.py  test_test_detector.py
