[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-controller"
version = "2.3.0"
description = "AI 自迭代控制器 - 调用 pi/opencode/claude/codex 让 AI 自动循环改进代码库"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Controller contributors"},
]
keywords = ["ai", "agent", "code-improvement", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"

[project.optional-dependencies]
toml = ["tomli; python_version < '3.11'"]
yaml = ["PyYAML>=6"]
test = ["pytest>=7"]
all = ["tomli; python_version < '3.11'", "PyYAML>=6", "pytest>=7"]

[project.scripts]
ai-controller = "ai_controller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_controller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
